--- a/index.less
+++ b/index.less
@@ -25,3 +25,23 @@ h1
     color: #FFFFFF;
     background-color: #000022;
 }
+button
+{
+    color: #FFFFFF;
+    background-color: #228844;
+    padding: 8px 32px;
+    border-radius: 32px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: transparent;
+    font-weight: bold;
+    font-size: 1.0rem;
+    cursor: pointer;
+
+    &:hover
+    {
+        color: #228844;
+        background-color: #FFFFFF;
+        border-color: #228844;
+    }
+}
