--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 }
 body {
   margin: 1rem;
+  line-height: 100%;
 }
 h1 {
   margin: -1rem;
@@ -21,10 +22,31 @@ h1 {
   color: #FFFFFF;
   background-color: #000022;
 }
+label {
+  display: block;
+}
+label span {
+  width: 8em;
+  display: inline-block;
+}
+label input {
+  width: 16em;
+}
+input {
+  margin: 4px;
+  padding: 4px 16px;
+  border-radius: 32px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #888;
+  font-size: 1rem;
+  min-width: 120px;
+}
 button {
+  margin: 4px;
   color: #FFFFFF;
   background-color: #228844;
-  padding: 8px 32px;
+  padding: 4px 16px;
   border-radius: 32px;
   border-style: solid;
   border-width: 1px;
@@ -37,4 +59,8 @@ button:hover {
   color: #228844;
   background-color: #FFFFFF;
   border-color: #228844;
+}
+.application-form button {
+  margin-left: calc(8em + 4px);
+  width: 16em;
 }
