--- a/index.less
+++ b/index.less
@@ -6,6 +6,7 @@
 body
 {
     margin: 1rem;
+    line-height: 100%;
 }
 h1
 {
@@ -25,11 +26,37 @@ h1
     color: #FFFFFF;
     background-color: #000022;
 }
+label
+{
+    display: block;
+    span
+    {
+        width: 8em;
+        display: inline-block;
+    }
+    input
+    {
+        width: 16em;
+    }
+}
+input
+{
+    margin: 4px;
+    padding: 4px 16px;
+    border-radius: 32px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #888;
+    font-size: 1.0rem;
+
+    min-width: 120px;
+}
 button
 {
+    margin: 4px;
     color: #FFFFFF;
     background-color: #228844;
-    padding: 8px 32px;
+    padding: 4px 16px;
     border-radius: 32px;
     border-style: solid;
     border-width: 1px;
@@ -43,5 +70,13 @@ button
         color: #228844;
         background-color: #FFFFFF;
         border-color: #228844;
+    }
+}
+.application-form
+{
+    button
+    {
+        margin-left: calc(8em + 4px);
+        width: 16em;
     }
 }
