--- a/index.less
+++ b/index.less
@@ -65,11 +65,12 @@ button
     font-size: 1.0rem;
     cursor: pointer;
 
-    &:hover
+    &.sub
     {
         color: #228844;
         background-color: #FFFFFF;
         border-color: #228844;
+        padding: 4px 8px;
     }
 }
 .application-form
