--- a/index.less
+++ b/index.less
@@ -16,6 +16,40 @@ h1
     color: #FFFFFF;
     background-color: #000022;
 }
+h2
+{
+    display: inline-flex;
+    align-items: center;
+
+    div.identity
+    {
+        display: inline-flex;
+        align-items: center;
+        div
+        {
+            display: inline-flex;
+            align-items: center;
+            margin-right: 8px;
+
+            *
+            {
+                margin-right: 8px;
+            }
+
+            img
+            {
+                height: 32px;
+                width: 32px;
+                border-radius: 4px;
+            }
+
+            span + span
+            {
+                color: #888;
+            }
+        }
+    }
+}
 .github
 {
     float: right;
